# Django_learning

./: .gitignore  Makefile  backup.json  db.sqlite3  manage.py  my_file.txt  pyproject.toml
.github/workflows/: django.yml
Django_learning/: asgi.py  settings.py  urls.py  wsgi.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_category_is_active.py  0004_category_custom_fields.py  0005_remove_category_custom_fields.py  0006_category_stock.py
categories/templates/: categories.html
projects/: models.py  serializer.py  urls.py
projects/migrations/: 0001_initial.py
templates/: index.html
test/: main.py
